syntax = "proto3";

package story;
option go_package = "github.com/jonashiltl/sessions-backend/packages/grpc/story";

import "google/api/annotations.proto";
import "common/common.proto";

service StoryService {
    rpc CreateStory (CreateStoryRequest) returns (PublicStory) {
        option (google.api.http) = {
            post: "/"
            body: "*"
        };
    };
    rpc GetStory (GetStoryRequest) returns (PublicStory) {
        option (google.api.http) = {
			get: "/{s_id}"
        };
    };
    rpc DeleteStory (DeleteStoryRequest) returns (common.MessageResponse) {
        option (google.api.http) = {
			delete: "/{s_id}"
        };
    };
    rpc GetByUser (GetByUserRequest) returns (PagedStories) {
        option (google.api.http) = {
			get: "/user/{u_id}"
        };
    };
    rpc GetByParty (GetByPartyRequest) returns (PagedStories) {
        option (google.api.http) = {
			get: "/party/{p_id}"
        };
    };
    rpc PresignURL (PresignURLRequest) returns (PresignURLResponse) {
        option (google.api.http) = {
			get: "/presign/{key}"
        };
    };
}

message PublicStory {
    string id = 1;
    string p_id = 2;
    string u_id = 3;
    float lat = 5;
    float long = 6;
    string url = 4;
    repeated string tagged_friends = 7;
    string created_at = 8;
}

message CreateStoryRequest {
    string requester_id = 1;
    string p_id = 2;
    string url = 3;
    float lat = 4;
    float long = 5;
    repeated string tagged_friends = 6;
}

message GetStoryRequest {
    string s_id = 1;
}

message DeleteStoryRequest {
    string requester_id = 1;
    string s_id = 2;
}

message GetByUserRequest {
    string u_id = 1;
    string next_page = 2;
}

message GetByPartyRequest {
    string p_id = 1;
    string next_page = 2;
}

message PresignURLRequest {
    string key = 1;
}

message PagedStories {
    repeated PublicStory stories = 1;
    string next_page = 2;
}

message PresignURLResponse {
    string url = 1;
}
